usersByBirthDateRange() is HATEOAS now